--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,21 @@
 <nav class="navbar navbar-default">
-	<div class="container-fluid">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">
+        <img alt="Sassy" src="assets/chefs-hat-1588125_640.png" width="32" height="32">
+      </a>
     </div>
 
-    <div class="collapse navbar-collapse">    			
-			<ul class="nav navbar-nav">
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+      <ul class="nav navbar-nav">
 				<li routerLinkActive="active">
 					<a 
 						routerLink="/recipes" 
@@ -18,26 +28,33 @@
 						*ngIf="!isAuthenticated">Authenticate
 					</a>
 				</li>
-				<li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>								 
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li *ngIf="isAuthenticated">
+				<li routerLinkActive="active">
+					<a routerLink="/shopping-list">
+						Shopping List
+					</a>
+				</li>	
+      </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li *ngIf="isAuthenticated">
 					<a 
 						style="cursor: pointer;"
 						(click)="onLogout()">Logout
 					</a>
 				</li>
-				<li 
-					class="dropdown" 
-					appDropdown 
+        <li 
+        	class="dropdown"
+        	appDropdown 
 					*ngIf="isAuthenticated">
-					<a 
-						style="cursor: pointer;" 
-						class="dropdown-toggle" 
-						role="button">Manage 
-						<span class="caret"></span>
-					</a>
-					<ul class="dropdown-menu">
+          <a 
+          	class="dropdown-toggle" 
+          	data-toggle="dropdown" 
+          	role="button" 
+          	aria-haspopup="true" 
+          	aria-expanded="false">Manage 
+          	<span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
 						<li>
 							<a 
 								style="cursor: pointer;"
@@ -49,10 +66,10 @@
 								style="cursor: pointer;"
 								(click)="onFetchData()">Fetch Data
 							</a>
-						</li>				
-					</ul>
-				</li>
-			</ul>	
-		</div>
-	</div>
+						</li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
