--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -57,8 +57,8 @@
           <ul class="dropdown-menu">
 						<li>
 							<a 
-								style="cursor: pointer;"
-								(click)="onSaveData()">Save Data
+								class="isDisabled"
+							>Save Data
 							</a>
 						</li>
 						<li>
