--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,25 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
+
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+      <button 
+      	type="button" 
+      	class="navbar-toggle" 
+      	(click)="collapsed = !collapsed"
+      >
+    	<span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
       </button>
-      <a class="navbar-brand" href="#">
+      <a routerlink="/" class="navbar-brand">
         <img alt="Sassy" src="assets/chefs-hat-1588125_640.png" width="32" height="32">
       </a>
-    </div>
+    </div>    	
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+    <div 
+    	class="navbar-collapse" 
+    	[class.collapse]="collapsed" 
+    	(window:resize)="collapsed = true">
       <ul class="nav navbar-nav">
 				<li routerLinkActive="active">
 					<a 
